I2B2UI-387 - Display inactive codes in browse and search (always displayed, grey font color, NOT draggable) - Fixed spacing in ontology options modal

--- a/js-i2b2/cells/ONT/assets/Ontology.css
+++ b/js-i2b2/cells/ONT/assets/Ontology.css
@@ -255,9 +255,12 @@ button.invert:hover{
     width: fit-content !important;
 }
 
-
 #ontOptionsModal .ontologyCheckboxOptions{
     vertical-align: -2px;
+}
+
+#ontOptionsModal .ontOptionSection {
+    margin-bottom: 0.7em;
 }
 
 #i2b2TreeviewOntNav .inactiveTerm,
